[style] add some more div styling for everything will align correctly

--- a/src/css/expensesApp.css
+++ b/src/css/expensesApp.css
@@ -3,10 +3,6 @@
   margin: 0 auto;
 }
 
-.expense-list-container,
-.rightSection-container {
-  top: 15%
-}
 
 .expense-list-container {
   position: absolute;
@@ -15,21 +11,15 @@
   float: left;
 }
 
-/*.chart-container {
-  max-height: 40px;
-}*/
-
 .rightSection-container {
   width: 50%;
   margin: 0 auto;
   float: right;
 }
 
-/*.react-bs-table {
-  width: 100%;
-  height: 500px;
-  overflow: scroll;
-}*/
+.react-bs-table {
+  margin: 0 auto;
+}
 
 .react-bs-table-container {
   margin: 0 auto;
@@ -38,15 +28,15 @@
   overflow: scroll;
 }
 
-/*.react-bs-table-container-body {
-  height: 500px;
-  overflow: scroll;
-}*/
+.react-bs-table-container-body {
+  margin: 0 auto;
+}
 
 .total {
   font-size: 40px;
-  margin: 15px;
+  margin: 0 auto;
   text-align: center;
+  padding-top: 10px;
   overflow: auto;
   width: 560px;
 }
@@ -54,6 +44,7 @@
 .transactions {
   margin: 0 auto;
   padding-left: 50px;
+  padding-top: 8%;
 }
 /*.highcharts-background {
   background-color: none;
